--- a/views/partials/create-room-form.html
+++ b/views/partials/create-room-form.html
@@ -1,44 +1,54 @@
-<form hx-post="/create-room">
+<form id="createRoomForm" class="space-y-4" hx-post="/create-room">
   <p id="message" class="text-yellow-500 text-sm mt-1">{{.Message}}</p>
-  <div class="mb-4">
-    <label for="name" class="block mb-2">Room Name</label>
+
+  <div>
+    <label for="name" class="block text-sm font-medium text-gray-700"
+      >Room Name</label
+    >
     <input
-      type="text"
       id="name"
+      type="text"
       name="name"
-      class="w-full p-2 border rounded"
       required
       value="{{.Room.Name}}"
       placeholder="My wonderful room"
       oninput="this.nextElementSibling.textContent = ''"
+      class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"
     />
     <p class="text-red-500 text-sm mt-1">{{.Errors.Name}}</p>
   </div>
 
-  <div class="mb-4">
-    <label
-      for="users"
-      class="block mb-2"
-      aria-label="dont have the budget for combobox autocomplete :("
-      >Users</label
+  <div>
+    <label for="users" class="block text-sm font-medium text-gray-700"
+      >Users (comma-separated)</label
     >
-    <p class="text-xs text-gray-500">Comma separated list of usernames</p>
     <input
       type="text"
       id="users"
       name="users"
-      class="w-full p-2 border rounded"
       required
       oninput="this.nextElementSibling.textContent = ''"
       placeholder="ricin, miloudi, cricket"
       value="{{.Room.Users}}"
+      class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500"
     />
+
     <p class="text-red-500 text-sm mt-1">{{.Errors.Users}}</p>
   </div>
-  <button
-    type="submit"
-    class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700"
-  >
-    Create Room
-  </button>
+
+  <div class="flex justify-end space-x-2">
+    <button
+      type="button"
+      class="px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+      hx-on:click="closeCreateRoomModal()"
+    >
+      Cancel
+    </button>
+    <button
+      type="submit"
+      class="px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+    >
+      Create Room
+    </button>
+  </div>
 </form>
