--- a/views/partials/message.html
+++ b/views/partials/message.html
@@ -1,5 +1,5 @@
 {{define "partials/message"}}
-<div class="flex items-start space-x-2">
+<div class="flex items-start space-x-2 mt-4">
   <img
     src="https://via.placeholder.com/40"
     alt="User Avatar"
