added self messages n shi

--- a/views/partials/message-range-pagination.html
+++ b/views/partials/message-range-pagination.html
@@ -1,5 +1,26 @@
-{{range $i, $v := .Messages}}
+{{range $i, $v := .Messages}} {{ if eq .UserID $.uid }}
 
+<div
+  class="flex items-start space-x-2 justify-end mt-4"
+  {{if
+  not
+  $i}}
+  hx-get="/rooms/{{$.RoomID}}/messages?page={{or $.NextPage 2}}"
+  hx-trigger="intersect threshold:0.1 once root:#room-{{$.RoomID}}-messages delay:100ms"
+  hx-swap="beforebegin"
+  {{end}}
+>
+  <div>
+    <p class="font-medium text-right">You</p>
+    <p class="bg-blue-600 text-white p-2 rounded-lg shadow">{{.Content}}</p>
+  </div>
+  <img
+    src="https://via.placeholder.com/40"
+    alt="User Avatar"
+    class="w-10 h-10 rounded-full"
+  />
+</div>
+{{else}}
 <div
   class="flex items-start space-x-2 mt-4"
   {{if
@@ -20,4 +41,4 @@
     <p class="bg-white p-2 rounded-lg shadow">{{.Content}}</p>
   </div>
 </div>
-{{end}}
+{{end}} {{end}}
