--- a/views/partials/message-left.html
+++ b/views/partials/message-left.html
@@ -8,6 +8,9 @@
   <div>
     <p class="font-medium">{{.Username}}</p>
     <p class="bg-white p-2 rounded-lg shadow">{{.Content}}</p>
+    <div class="mt-1 flex items-center space-x-2">
+      <button class="text-sm text-blue-500 hover:underline">Reply</button>
+    </div>
   </div>
 </div>
 {{end}}
