--- a/views/partials/message-right.html
+++ b/views/partials/message-right.html
@@ -3,6 +3,9 @@
   <div>
     <p class="font-medium text-right">You</p>
     <p class="bg-blue-600 text-white p-2 rounded-lg shadow">{{.Content}}</p>
+    <div class="mt-1 flex items-center space-x-2 justify-end">
+      <button class="text-sm text-blue-500 hover:underline">Reply</button>
+    </div>
   </div>
   <img
     src="https://via.placeholder.com/40"
