--- a/views/partials/room.html
+++ b/views/partials/room.html
@@ -17,10 +17,10 @@
 
 <script>
   function hightlightRoom(button) {
-    const rooms = document.querySelectorAll(".selected-room");
+    const rooms = document.querySelectorAll('.selected-room')
     rooms.forEach((room) => {
-      room.classList.remove("selected-room");
-    });
-    button.parentElement.classList.add("selected-room");
+      room.classList.remove('selected-room')
+    })
+    button.parentElement.classList.add('selected-room')
   }
 </script>
