--- a/views/partials/message.html
+++ b/views/partials/message.html
@@ -1,3 +1,4 @@
 {{define "partials/message"}} {{ if eq .UserID $.uid }} {{template
-"partials/message-right" .}} {{ else }} {{template "partials/message-left" .}}
-{{ end }} {{end}}
+"partials/message-right" .}} {{ else if not .UserId }} {{template
+"partials/message-middle" .}} {{else}} {{template "partials/message-left" .}} {{
+end }} {{end}}
