--- a/views/partials/room-info-modal.html
+++ b/views/partials/room-info-modal.html
@@ -7,7 +7,7 @@
     <div class="space-y-4">
       <div>
         <h3 class="text-lg font-semibold">Members:</h3>
-        <ul id="memberList" class="list-disc list-inside h-36 overflow-y-auto">
+        <ul id="member-list" class="list-disc list-inside h-36 overflow-y-auto">
           {{range .Members }}
           <li
             class="flex items-center justify-between"
