--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -1,8 +1,6 @@
-<div class="max-w-md mx-auto bg-white rounded shadow p-6">
-  <h2 class="text-2xl font-bold mb-4">Login</h2>
-  {{ template "partials/login-form" . }}
-  <p class="mt-2">
-    Do not have an account?
-    <a hx-boost="true" class="text-blue-500" href="/signup">Sign up</a>
-  </p>
-</div>
+<h1 class="text-2xl font-bold mb-6 text-center">Sign in</h1>
+{{ template "partials/login-form" . }}
+<p class="mt-2 mb-1 text-center block text-sm font-medium text-gray-700">
+  Do not have an account?
+  <a hx-boost="true" class="text-blue-500" href="/signup">Sign Up</a>
+</p>
