--- a/views/pages/signup.html
+++ b/views/pages/signup.html
@@ -1,8 +1,6 @@
-<div class="max-w-md mx-auto bg-white rounded shadow p-6">
-  <h2 class="text-2xl font-bold mb-4">Sign Up</h2>
-  {{ template "partials/signup-form" . }}
-  <p class="mt-2">
-    Already have an account?
-    <a hx-boost="true" class="text-blue-500" href="/login">Login</a>
-  </p>
-</div>
+<h1 class="text-2xl font-bold mb-6 text-center">Sign up</h1>
+{{ template "partials/signup-form" . }}
+<p class="mt-2 mb-1 text-center block text-sm font-medium text-gray-700">
+  Already have an account?
+  <a hx-boost="true" class="text-blue-500" href="/login">Login</a>
+</p>
