--- a/views/partials/message-left.html
+++ b/views/partials/message-left.html
@@ -1,7 +1,7 @@
 {{define "partials/message-left"}}
 <div class="flex items-start space-x-2 mt-4">
   <img
-    src="https://via.placeholder.com/40"
+    src="https://ui-avatars.com/api/?rounded=true&background=random&name={{.Username}}"
     alt="User Avatar"
     class="w-10 h-10 rounded-full"
   />
