--- a/views/partials/message-range-pagination.html
+++ b/views/partials/message-range-pagination.html
@@ -18,7 +18,7 @@
     </div>
   </div>
   <img
-    src="https://via.placeholder.com/40"
+    src="https://ui-avatars.com/api/?rounded=true&background=random&name={{.Username}}"
     alt="User Avatar"
     class="w-10 h-10 rounded-full"
   />
@@ -50,7 +50,7 @@
   {{end}}
 >
   <img
-    src="https://via.placeholder.com/40"
+    src="https://ui-avatars.com/api/?rounded=true&background=random&name={{.Username}}"
     alt="User Avatar"
     class="w-10 h-10 rounded-full"
   />
