--- a/views/partials/message-right.html
+++ b/views/partials/message-right.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <img
-    src="https://via.placeholder.com/40"
+    src="https://ui-avatars.com/api/?rounded=true&background=random&name={{.Username}}"
     alt="Your Avatar"
     class="w-10 h-10 rounded-full"
   />
