all goroutiens use fiber Context() when possible, now room join and room leave work 100% with room sync, kick messages, ws pubsub and all the razzle dazzle

--- a/views/partials/message.html
+++ b/views/partials/message.html
@@ -1,4 +1,4 @@
 {{define "partials/message"}} {{ if eq .UserID $.uid }} {{template
-"partials/message-right" .}} {{ else if not .UserId }} {{template
+"partials/message-right" .}} {{ else if not .UserID }} {{template
 "partials/message-middle" .}} {{else}} {{template "partials/message-left" .}} {{
 end }} {{end}}
